--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "gatsby-starter-boilerplate",
+  "name": "popupgo",
   "private": true,
-  "description": "Flotiq recipe starter for Gatsby",
+  "description": "popupgo",
   "version": "1.0.0",
   "license": "MIT",
   "author": "Flotiq team <helo@flotiq.com> (https://flotiq.com/)",
@@ -23,8 +23,8 @@
     "@tailwindcss/forms": "^0.5.0",
     "flotiq-components-react": "^1.0.0",
     "gatsby": "^4.10.1",
-    "gatsby-plugin-google-gtag": "^4.12.1",
     "gatsby-plugin-gatsby-cloud": "^4.13.0",
+    "gatsby-plugin-google-gtag": "^4.12.1",
     "gatsby-plugin-image": "^2.10.0",
     "gatsby-plugin-manifest": "^4.10.1",
     "gatsby-plugin-react-helmet": "^5.10.0",
@@ -37,6 +37,7 @@
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-helmet": "^6.1.0",
+    "react-markdown": "^8.0.3",
     "typescript": "^4.6.2",
     "webpack": "^5.65.0"
   },
