--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@tailwindcss/forms": "^0.5.0",
     "flotiq-components-react": "^1.0.0",
     "gatsby": "^4.10.1",
+    "gatsby-plugin-disqus": "^1.2.4",
     "gatsby-plugin-gatsby-cloud": "^4.13.0",
     "gatsby-plugin-google-adsense": "^1.1.3",
     "gatsby-plugin-google-gtag": "^4.12.1",
