--- a/.prettierrc
+++ b/.prettierrc
@@ -1,7 +1,7 @@
 {
   "endOfLine": "lf",
-  "semi": true,
-  "singleQuote": true,
-  "tabWidth": 4,
+  "semi": false,
+  "singleQuote": false,
+  "tabWidth": 2,
   "trailingComma": "es5"
 }
