--- a/package.json
+++ b/package.json
@@ -1,79 +1,54 @@
 {
-  "name": "popupgo",
+  "name": "bonneville",
   "private": true,
-  "description": "popupgo",
-  "version": "1.0.0",
+  "description": "A starter blog template for use with GatsbyJS",
+  "version": "1.2.0",
   "license": "MIT",
-  "author": "Flotiq team <helo@flotiq.com> (https://flotiq.com/)",
   "scripts": {
     "build": "gatsby build",
     "develop": "gatsby develop",
-    "format": "prettier --write \"**/*.{js,jsx,ts,tsx,json,md}\"",
-    "start": "gatsby develop",
+    "format": "prettier --write \"**/*.{js,jsx,json,md}\"",
+    "start": "npm run develop",
     "serve": "gatsby serve",
-    "clean": "gatsby clean",
-    "test": "echo \"Write tests! -> https://gatsby.dev/unit-testing\" && exit 1"
+    "test": "echo \"Write tests! -> https://gatsby.dev/unit-testing \""
   },
   "dependencies": {
-    "@fontsource/poppins": "^4.5.3",
-    "@fontsource/sora": "^4.5.3",
-    "@headlessui/react": "^1.5.0",
-    "@heroicons/react": "^1.0.6",
-    "@popperjs/core": "^2.11.4",
-    "@tailwindcss/forms": "^0.5.0",
-    "flotiq-components-react": "^1.0.0",
-    "gatsby": "^4.10.1",
-    "gatsby-plugin-disqus": "^1.2.4",
-    "gatsby-plugin-gatsby-cloud": "^4.13.0",
-    "gatsby-plugin-google-adsense": "^1.1.3",
-    "gatsby-plugin-google-gtag": "^4.12.1",
-    "gatsby-plugin-image": "^2.10.0",
-    "gatsby-plugin-manifest": "^4.10.1",
-    "gatsby-plugin-react-helmet": "^5.10.0",
-    "gatsby-plugin-robots-txt": "^1.7.0",
-    "gatsby-plugin-sharp": "^4.10.1",
-    "gatsby-plugin-sitemap": "^5.10.1",
-    "gatsby-source-filesystem": "^4.10.0",
-    "gatsby-source-flotiq": "^4.1.8",
-    "gatsby-transformer-sharp": "^4.10.0",
-    "react": "17.0.2",
-    "react-dom": "17.0.2",
+    "@fontsource/lato": "^4.5.0",
+    "@fontsource/playfair-display": "^4.5.1",
+    "babel-plugin-styled-components": "^2.0.2",
+    "framer-motion": "^5.4.5",
+    "gatsby": "^4.3.0",
+    "gatsby-plugin-google-analytics": "^4.3.0",
+    "gatsby-plugin-image": "^2.3.0",
+    "gatsby-plugin-manifest": "^4.3.0",
+    "gatsby-plugin-netlify": "^3.14.0",
+    "gatsby-plugin-offline": "^5.3.0",
+    "gatsby-plugin-react-helmet": "^5.3.0",
+    "gatsby-plugin-sharp": "^4.3.0",
+    "gatsby-plugin-sitemap": "^5.3.0",
+    "gatsby-plugin-styled-components": "^5.3.0",
+    "gatsby-remark-images": "^6.3.0",
+    "gatsby-source-filesystem": "^4.3.0",
+    "gatsby-transformer-remark": "^5.3.0",
+    "gatsby-transformer-sharp": "^4.3.0",
+    "minimist": "^1.2.5",
+    "prop-types": "^15.7.2",
+    "react": "^17.0.2",
+    "react-cookie-consent": "^7.0.0",
+    "react-dom": "^17.0.2",
     "react-helmet": "^6.1.0",
-    "react-markdown": "^8.0.3",
-    "typescript": "^4.6.2",
-    "webpack": "^5.65.0"
+    "react-icons": "^4.3.1",
+    "serialize-javascript": "^6.0.0",
+    "styled-components": "^5.3.3"
   },
   "devDependencies": {
-    "@babel/core": "^7.16.5",
-    "@babel/eslint-parser": "^7.16.5",
-    "@babel/plugin-syntax-flow": "^7.16.5",
-    "@babel/plugin-transform-react-jsx": "^7.16.5",
-    "@babel/preset-react": "^7.16.5",
-    "@hot-loader/react-dom": "17.0.2",
-    "@typescript-eslint/parser": "^5.8.1",
-    "autoprefixer": "^10.4.2",
-    "babel-eslint": "^10.1.0",
-    "cross-env": "^7.0.3",
-    "dotenv": "^10.0.0",
-    "eslint": "^8.5.0",
-    "eslint-config-airbnb": "^19.0.4",
-    "eslint-config-react-app": "^7.0.0",
-    "eslint-plugin-flowtype": "^8.0.3",
-    "eslint-plugin-import": "^2.25.3",
-    "eslint-plugin-jsx": "^0.1.0",
-    "eslint-plugin-jsx-a11y": "^6.5.1",
-    "eslint-plugin-react": "^7.28.0",
-    "eslint-plugin-react-hooks": "^4.3.0",
-    "gatsby-plugin-postcss": "^5.4.0",
-    "postcss": "^8.4.5",
-    "prettier": "^2.5.1",
-    "tailwindcss": "^3.0.13"
+    "prettier": "^2.5.1"
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/flotiq/gatsby-starter-boilerplate"
+    "url": "https://github.com/bagseye/bonneville"
   },
   "bugs": {
-    "url": "https://github.com/flotiq/gatsby-starter-boilerplate/issues"
+    "url": "https://github.com/bagseye/bonneville/issues"
   }
 }
