--- a/package.json
+++ b/package.json
@@ -38,7 +38,9 @@
     "react-dom": "^17.0.2",
     "react-helmet": "^6.1.0",
     "react-icons": "^4.3.1",
+    "react-slick": "^0.29.0",
     "serialize-javascript": "^6.0.0",
+    "slick-carousel": "^1.8.1",
     "styled-components": "^5.3.3"
   },
   "devDependencies": {
